<resources>
    <string name="app_name">VinToday</string>

    <string name="top_picks">Top Picks</string>
    <string name="recomendations">Recomendations</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello</string>
    <string name="language">Language</string>">
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="you">You</string>
    <string name="saved_news">Saved News</string>
    <string name="search">Search</string>
    <string name="read_news">Read News</string>
    <string name="welcome">Welcome!</string>
    <string name="greetings">Sign in before you start reading news</string>
    <string name="greetings_new">Sign up to get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="search_result">Search Result:</string>
    <string name="search_message">No Result</string>
    <string name="no_internet">No Internet Connection</string>">
    <string name="try_again">Try Again</string>">
    <string name="no_saved_news">No Saved News</string>


</resources>