<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/llt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/top_picks"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pb_t"
                android:padding="20dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_picks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/recomendations"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/pb_r"
                android:padding="20dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recomendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_search_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="textStart"
                android:layout_marginStart="20dp"
                android:text="@string/search_result"
                android:textSize="22sp" />

            <ProgressBar
                android:id="@+id/pb_search"
                android:padding="20dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llnohome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_no_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/no_internet"
                android:textSize="22sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:id="@+id/btn_retry"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
